[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mrmemory"
version = "0.1.0"
authors = [
  { name="Mr. Marino", email="info@mrmarino.dev" },
]
description = "Tiered Memory & Knowledge Graph Plugin for Agentic Frameworks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
]
dependencies = [
    "rich>=10.0.0",
]

[project.urls]
"Homepage" = "https://github.com/marrocmau/mr-memory"
"Bug Tracker" = "https://github.com/marrocmau/mr-memory/issues"

[project.scripts]
mr-memory = "mrmemory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
